# OOP-exercises

./: L1Ex1.py  L1Ex2.py  L1Ex3.py  L1Ex4.py  L1Ex5.py  L1Ex6.py  L1Ex7.py  L2Ex1.py  LICENSE  README.md  pyproject.toml
tests/: testL1Ex1.py  test_L1Ex1.py  test_L1Ex2.py  test_L1Ex3.py  test_L1Ex4.py  test_L1Ex5.py  test_L1Ex6.py  test_L1Ex7.py  test_L2Ex1.py
